RESOLVED FIXED172763
[WK2] Fix bad assertion in BackgroundProcessResponsivenessTimer::scheduleNextResponsivenessCheck()
https://bugs.webkit.org/show_bug.cgi?id=172763
Summary [WK2] Fix bad assertion in BackgroundProcessResponsivenessTimer::scheduleNext...
Chris Dumez
Reported 2017-05-31 11:35:35 PDT
Fix bad assertion in BackgroundProcessResponsivenessTimer::scheduleNextResponsivenessCheck(). It gets hit when a process becomes unresponsive: ASSERTION FAILED: !m_timeoutTimer.isActive() /Users/akinsley/OpenSource/Source/WebKit2/UIProcess/BackgroundProcessResponsivenessTimer.cpp(151) : void WebKit::BackgroundProcessResponsivenessTimer::scheduleNextResponsivenessCheck() 1 0x11072d29d WTFCrash 2 0x107efa183 WebKit::BackgroundProcessResponsivenessTimer::scheduleNextResponsivenessCheck() 3 0x107ef9e07 WebKit::BackgroundProcessResponsivenessTimer::timeoutTimerFired() 4 0x107efacd5 WTF::RunLoop::Timer<WebKit::BackgroundProcessResponsivenessTimer>::fired() 5 0x11077c261 WTF::RunLoop::TimerBase::timerFired(__CFRunLoopTimer*, void*) 6 0x7fff7cba5c54 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 7 0x7fff7cba58df __CFRunLoopDoTimer 8 0x7fff7cba543a __CFRunLoopDoTimers 9 0x7fff7cb9cb81 __CFRunLoopRun 10 0x7fff7cb9c114 CFRunLoopRunSpecific 11 0x7fff7c0fdebc RunCurrentEventLoopInMode 12 0x7fff7c0fdcf1 ReceiveNextEventCommon 13 0x7fff7c0fdb26 _BlockUntilNextEventMatchingListInModeWithFilter 14 0x7fff7a698bf8 _DPSNextEvent 15 0x7fff7ae1484e -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] 16 0x7fff7a68d57f -[NSApplication run] 17 0x7fff7a657fb2 NSApplicationMain 18 0x7fff92331235 start 19 0x1 Segmentation fault: 11
Attachments
Patch (1.84 KB, patch)
2017-05-31 11:37 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-05-31 11:37:14 PDT
WebKit Commit Bot
Comment 2 2017-05-31 12:17:31 PDT
Comment on attachment 311614 [details] Patch Clearing flags on attachment: 311614 Committed r217617: <http://trac.webkit.org/changeset/217617>
WebKit Commit Bot
Comment 3 2017-05-31 12:17:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.