[WK2] Fix bad assertion in BackgroundProcessResponsivenessTimer::scheduleNextResponsivenessCheck() https://bugs.webkit.org/show_bug.cgi?id=172763

Reviewed by Zalan Bujtas.

Fix bad assertion in BackgroundProcessResponsivenessTimer::scheduleNextResponsivenessCheck().
It gets hit when a process becomes unresponsive. The reason is that RunLoop::Timer::isActive()
still returns true while the timerFired() callback is called.

* UIProcess/BackgroundProcessResponsivenessTimer.cpp:
(WebKit::BackgroundProcessResponsivenessTimer::scheduleNextResponsivenessCheck):


Canonical link: https://commits.webkit.org/189665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217617 268f45cc-cd09-0410-ab3c-d52691b4dbfc