Source/WebKit2/UIProcess/BackgroundProcessResponsivenessTimer.cpp
@@ -148,7 +148,6 @@ void BackgroundProcessResponsivenessTimer::scheduleNextResponsivenessCheck()
 {
     // Exponential backoff to avoid waking up the process too often.
     ASSERT(!m_responsivenessCheckTimer.isActive());
-    ASSERT(!m_timeoutTimer.isActive());
     m_checkingInterval = std::min(m_checkingInterval * 2, maximumCheckingInterval);
     m_responsivenessCheckTimer.startOneShot(m_checkingInterval);
 }
